force-app/main/default/objects/vlocity_cmt__CachedAPIMigrate__c/vlocity_cmt__CachedAPIMigrate__c.object-meta.xml
<CustomObject>
    <description>Data model to be used for tracking the cached dependency objects.</description>
    <label>CachedAPIMigrate</label>
    <nameField>
        <label>CachedAPIMigrate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIMigrates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>