force-app/main/default/objects/vlocity_cmt__CachedAPIMigrate__c/fields/vlocity_cmt__ExternalJobId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ExternalJobId__c</fullName>
    <description>This stores the job id of the sync job running on an external system.</description>
    <externalId>true</externalId>
    <label>ExternalJobId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>