force-app/main/default/objects/vlocity_cmt__CachedAPIMigrate__c/fields/vlocity_cmt__Message__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Message__c</fullName>
    <description>This stores the message coming from external system</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>