force-app/main/default/objects/vlocity_cmt__CachedAPIMigrate__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>This stores the status of the migrate job</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>queued</fullName>
                <default>true</default>
                <label>queued</label>
            </value>
            <value>
                <fullName>running</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>errored</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>